// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should tokenize a blank program 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "main",
    "toString": [Function],
    "type": "identifier",
    "value": "main",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": "=>",
    "toString": [Function],
    "type": "arrow",
    "value": "=>",
  },
  Object {
    "col": 8,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": "{",
    "toString": [Function],
    "type": "lcurly",
    "value": "{",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": "}",
    "toString": [Function],
    "type": "rcurly",
    "value": "}",
  },
]
`;

exports[`should tokenize a function that returns true 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "check",
    "toString": [Function],
    "type": "identifier",
    "value": "check",
  },
  Object {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": "=>",
    "toString": [Function],
    "type": "arrow",
    "value": "=>",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": "true",
    "toString": [Function],
    "type": "boolean",
    "value": "true",
  },
]
`;

exports[`should tokenize a function with parameters and a return type 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "capitalize",
    "toString": [Function],
    "type": "identifier",
    "value": "capitalize",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 12,
    "line": 1,
    "lineBreaks": 0,
    "offset": 11,
    "text": "(",
    "toString": [Function],
    "type": "lparen",
    "value": "(",
  },
  Object {
    "col": 13,
    "line": 1,
    "lineBreaks": 0,
    "offset": 12,
    "text": "word",
    "toString": [Function],
    "type": "identifier",
    "value": "word",
  },
  Object {
    "col": 17,
    "line": 1,
    "lineBreaks": 0,
    "offset": 16,
    "text": ":",
    "toString": [Function],
    "type": "colon",
    "value": ":",
  },
  Object {
    "col": 18,
    "line": 1,
    "lineBreaks": 0,
    "offset": 17,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 19,
    "line": 1,
    "lineBreaks": 0,
    "offset": 18,
    "text": "string",
    "toString": [Function],
    "type": "identifier",
    "value": "string",
  },
  Object {
    "col": 25,
    "line": 1,
    "lineBreaks": 0,
    "offset": 24,
    "text": ")",
    "toString": [Function],
    "type": "rparen",
    "value": ")",
  },
  Object {
    "col": 26,
    "line": 1,
    "lineBreaks": 0,
    "offset": 25,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 27,
    "line": 1,
    "lineBreaks": 0,
    "offset": 26,
    "text": "=>",
    "toString": [Function],
    "type": "arrow",
    "value": "=>",
  },
  Object {
    "col": 29,
    "line": 1,
    "lineBreaks": 0,
    "offset": 28,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 30,
    "line": 1,
    "lineBreaks": 0,
    "offset": 29,
    "text": "string",
    "toString": [Function],
    "type": "identifier",
    "value": "string",
  },
  Object {
    "col": 36,
    "line": 1,
    "lineBreaks": 0,
    "offset": 35,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 37,
    "line": 1,
    "lineBreaks": 0,
    "offset": 36,
    "text": "{",
    "toString": [Function],
    "type": "lcurly",
    "value": "{",
  },
  Object {
    "col": 38,
    "line": 1,
    "lineBreaks": 0,
    "offset": 37,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 39,
    "line": 1,
    "lineBreaks": 0,
    "offset": 38,
    "text": "return",
    "toString": [Function],
    "type": "keyword",
    "value": "return",
  },
  Object {
    "col": 45,
    "line": 1,
    "lineBreaks": 0,
    "offset": 44,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 46,
    "line": 1,
    "lineBreaks": 0,
    "offset": 45,
    "text": "word",
    "toString": [Function],
    "type": "identifier",
    "value": "word",
  },
  Object {
    "col": 50,
    "line": 1,
    "lineBreaks": 0,
    "offset": 49,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 51,
    "line": 1,
    "lineBreaks": 0,
    "offset": 50,
    "text": "}",
    "toString": [Function],
    "type": "rcurly",
    "value": "}",
  },
]
`;

exports[`should tokenize a variable assignment 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "let",
    "toString": [Function],
    "type": "keyword",
    "value": "let",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": "name",
    "toString": [Function],
    "type": "identifier",
    "value": "name",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": "=",
    "toString": [Function],
    "type": "assign",
    "value": "=",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 12,
    "line": 1,
    "lineBreaks": 0,
    "offset": 11,
    "text": "'Matan'",
    "toString": [Function],
    "type": "string",
    "value": "'Matan'",
  },
]
`;

exports[`should tokenize invocation 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "cat",
    "toString": [Function],
    "type": "identifier",
    "value": "cat",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": ".",
    "toString": [Function],
    "type": "dot",
    "value": ".",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": "meow",
    "toString": [Function],
    "type": "identifier",
    "value": "meow",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": "(",
    "toString": [Function],
    "type": "lparen",
    "value": "(",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": ")",
    "toString": [Function],
    "type": "rparen",
    "value": ")",
  },
]
`;

exports[`should tokenize two top-level functions 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "one",
    "toString": [Function],
    "type": "identifier",
    "value": "one",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": "=>",
    "toString": [Function],
    "type": "arrow",
    "value": "=>",
  },
  Object {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 8,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": "1",
    "toString": [Function],
    "type": "number",
    "value": "1",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 1,
    "offset": 8,
    "text": "
",
    "toString": [Function],
    "type": "linebreak",
    "value": "
",
  },
  Object {
    "col": 1,
    "line": 2,
    "lineBreaks": 0,
    "offset": 9,
    "text": "two",
    "toString": [Function],
    "type": "identifier",
    "value": "two",
  },
  Object {
    "col": 4,
    "line": 2,
    "lineBreaks": 0,
    "offset": 12,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 2,
    "lineBreaks": 0,
    "offset": 13,
    "text": "=>",
    "toString": [Function],
    "type": "arrow",
    "value": "=>",
  },
  Object {
    "col": 7,
    "line": 2,
    "lineBreaks": 0,
    "offset": 15,
    "text": " ",
    "toString": [Function],
    "type": "whitespace",
    "value": " ",
  },
  Object {
    "col": 8,
    "line": 2,
    "lineBreaks": 0,
    "offset": 16,
    "text": "2",
    "toString": [Function],
    "type": "number",
    "value": "2",
  },
]
`;
